--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="enter_city">Введите город…</string>
     <string name="enter_city_to_show_weather">Введите город, чтобы показать погоду</string>
     <string name="error_value">Ошибка: %1$s</string>
+    <string name="error_refreshing_weather">Не удалось обновить</string>
 </resources>
