refactor: loading shimmer for daylight, units for pressure, daylight visibility for invalid data;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="before_sunset_value">"До заката: "</string>
     <string name="second_format_hour_minute">%dч %02dм</string>
     <string name="second_format_minute">%dм</string>
+    <string name="pressure_value">%1$d м.р.с.</string>
 </resources>
