--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="my_location">Моё местоположение</string>
     <string name="enter_city">Введите город…</string>
     <string name="enter_city_to_show_weather">Введите город, чтобы показать погоду</string>
+    <string name="init_application">Идет инициализация списка городов. Это может занять некоторое время.</string>
     <string name="error_value">Ошибка: %1$s</string>
     <string name="error_refreshing_weather">Не удалось обновить</string>
     <string name="before_sunrise">До рассвета</string>
